tests/paczka1/fuzzy1/80941141.err
Error in line 2: rmik A419 63,5
Error in line 5: 4Vj A761 75,5
Error in line 10: rmik A761 79,1
Error in line 14: zlr2bSaJBgx A419 97,1
Error in line 1: KqIGl A401 16,8
Error in line 12: rmik A419 65,0
Error in line 39: rmik A419 89,3
